fix X scrolling on iphone

--- a/css/main-page-blocks/header.css
+++ b/css/main-page-blocks/header.css
@@ -1,6 +1,3 @@
-header {
-    width: 100vw;
-}
 .header__top {
     border-radius: 20px;
     background-color: #FFFFFF;
@@ -150,18 +147,22 @@ header {
     .header__nav-list {
         flex-direction: column;
         position: absolute;
-        right: -150%;
+        left: 0;
         top: 0;
-        z-index: 100;
+        opacity: 0;
+        visibility: hidden;
+        z-index: -100;
         background-color: #FFFFFF;
-        transition: right 0.3s ease-out;
+        transition: opacity 0.3s ease-out;
         padding: 30px 0;
         margin-top: -1px;
         border-radius: 0px 0px 20px 20px;
     }
 
     .header__nav-list.open {
-        right: 0;
+        z-index: 100;
+        opacity: 1;
+        visibility: visible;
     }
 
     .header__tel {
